Fix alignment of banner

--- a/src/modules/dashboard/components/ColonyHome/ColonyHome.css
+++ b/src/modules/dashboard/components/ColonyHome/ColonyHome.css
@@ -58,6 +58,7 @@
   width: 100%;
   position: absolute;
   bottom: 0;
+  left: 0;
   font-weight: var(--weight-bold);
   text-align: center;
 }
